<resources>
    <string name="app_name">KKU Hangout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!--Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_report">Report</string>
    <!--login-->
    <string name="txtlogin_header">Auth</string>
    <string name="txtlogin_username">Username :</string>
    <string name="txtlogin_button">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_aaaaa">AAAAA</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cafe">cafe</string>
    <string name="txt_placeholder">Contrary to popular belief, Lorem Ipsum is not simp
        ly random text. It has roots in a piece of classical Latin literatu
        re from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-S
        ydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
        passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lor
        em Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Ci
        cero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first
        cero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first
        cero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first
        cero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first
        cero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first
        cero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first

    </string>
    <string name="alertOnExitTXT">Are you sure to close this application?</string>
    <string name="logout_overflow_menu">Logout</string>
    <string name="txtlogout">Logout</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_the_data">Clear the data</string>
    <string name="authentication">Authentication</string>
    <string name="welcome_screen">Welcome screen</string>
    <string name="dark_mode">Dark mode</string>
    <string name="login_online">Login Online</string>
    <string name="natthaphong_thaboran_633020563_3">Natthaphong Thaboran 633020563-3</string>
    <string name="pohui_somnam_633021000_2">Pohui Somnam 633021000-2</string>
    <string name="copyright_all_rights_reserved_2022">Copyright © All Rights Reserved 2022</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="toggle_button">toggle button pic</string>
    <string name="alert_title">EXIT?</string>
    <string name="alert_message">Are you sure to close this application?</string>
    <string name="alert_positive">Quit</string>
    <string name="alert_negative">No</string>
    <string name="alert_toast">Application Terminated!</string>
    <string name="search">search</string>

</resources>