<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.hangout.nav_drawer.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_nav_profile" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hangout.nav_drawer.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_nav_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.hangout.nav_drawer.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_nav_about" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.hangout.nav_drawer.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_nav_logout" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.hangout.nav_drawer.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_nav_report" />
</navigation>