<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuLogout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:orderInCategory="101"
        android:title="@string/logout_overflow_menu" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/menuExit"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="999"
        android:title="Exit"
        android:tooltipText="@string/clear_the_data">

    </item>
</menu>