<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.hangout.fragments.nav_drawer.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_nav_profile" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hangout.fragments.nav_drawer.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_nav_home" >
        <action
            android:id="@+id/action_nav_home_to_cafeFragment"
            app:destination="@id/cafeFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.hangout.fragments.nav_drawer.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_nav_about" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.hangout.fragments.nav_drawer.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_nav_logout" />
    <fragment
        android:id="@+id/nav_report"
        android:name="com.example.hangout.fragments.nav_drawer.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_nav_report" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.hangout.LoginActivity"
        android:label="LoginActivity" />
    <activity
        android:id="@+id/welcomeActivity"
        android:name="com.example.hangout.WelcomeActivity"
        android:label="WelcomeActivity" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.example.hangout.MainActivity"
        android:label="a_topheader_and_content"
        tools:layout="@layout/a_topheader_and_content" />
    <fragment
        android:id="@+id/cafeFragment"
        android:name="com.example.hangout.fragments.CafeFragment"
        android:label="CafeFragment" />
</navigation>